# Draw2Img

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
draw2img/: main.py
draw2img/server/: __init__.py  main.py  model.py
draw2img/ui/: .gitignore  README.md  index.html  package-lock.json  package.json
draw2img/ui/src/: App.vue
draw2img/ui/src/views/: HomeView.vue
